# micromechanics

./: .gitignore  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  README_PYPI.md  SittingAtFischer.txt  commit.py  nanoIndent_tutorial.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  pypi.yml  tests.yml
Examples/Agilent/: Popin.xls
Examples/FischerScope/: FS1.txt  NiAl_250nm_TUIL_max_depth_1000nm_GM3_SM_previousGM1.xls
Examples/Tif/: FibCurtains.tif  ImageAccess.tif
GUI/: CalculateHardnessModulus.py  CalibrateTAF.py  DialogExport.ui  DialogExport_ui.py  Export.py  FrameStiffness.py  TipRadius.py  load_depth.py  main.py  main_window.ui  main_window_ui.py  myui.ui  output.xlsx  ui_myui.py
docs/: nanoindent.rst  requirements.txt
docs/source/: Basic Tutorial.rst  Code Documentation.rst  Doctest Examples.rst  __init__.rst  calibration.rst  conf.py  definitions.rst  documentation.rst  index.rst  input.rst  installation.rst  main.rst  modules.rst  nanoIndent_doctest.rst  nanoIndent_doctest_examples.rst  nanoIndent_documentation.rst  nanoIndent_tutorial.rst  nanoindent.rst  nanoindent_documentation.rst  nanoindent_tutorial.rst  nanoindentation.rst  nanoindnet_doctest_examples.rst  plot.rst  seldomUsedFunctions.rst  theory.rst  tif.rst  tip.rst  tips.rst  tutorialAdvanced.py  tutorialAdvanced.rst  tutorialTif.rst  (+4 more)
micromechanics/: __init__.py
nanoIndent/: nanoIndent_doctest.py  nanoIndent_doctest_examples.py  nanoIndent_documentation.py  nanoIndent_tutorial.py  nanoindent_doctest_examples.py  nanoindent_documentation.py  nanoindent_tutorial.py
nanoindentation/: __init__.py  calibration.py  definitions.py  hertz.py  input.py  main.py  names.json  namesBAKUP.json  nanoIndent_linting.py  plot.py  seldomUsedFunctions.py  theory.py  tip.py  tutorialAdvanced.py  tutorialBasic.py  tutorialInstallation.py  verification.py
source_code/: nanoIndent.py  nanoindent_doctest_examples.py  nanoindent_tutorial.py  tutorialAdvanced.py  tutorialBasic.py
testing/: testAgilent_xls.py  testAllFiles.py  testFischerScope_hdf5.py  testMicromaterials_hdf5.py  testVerification.py
tests/: testAgilent_xls.py  testAllFiles.py  testFischerScope_hdf5.py  testMicromaterials_hdf5.py  testVerification.py  testZeiss.py
(+41 files in other folders)
