[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoindentation"
version = "0.9.1"
authors = [
  { name="Steffen Brinckmann", email="sbrinckm@gmail.com"},
]
description = "Investigation of nanoindentation data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://micromechanics.readthedocs.io/en/main/"
"Bug Tracker" = "https://github.com/micromechanics/main/issues"