[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoindentation"
version = "0.9.6"
authors = [
  { name="Steffen Brinckmann", email="sbrinckm@gmail.com"},
]
description = "Investigation of nanoindentation data"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  "h5py>=3.7.0",
  "numpy>=1.19.2",
  "scipy>=1.5.3",
  "lmfit>=1.0.1",
  "pandas>=1.1.3",
  "matplotlib>=1.1.1"
]

[project.urls]
"Homepage" = "https://micromechanics.readthedocs.io/en/main/"
"Bug Tracker" = "https://github.com/micromechanics/main/issues"