[metadata]
url =https://micromechanics.github.io/
author = Micromechanics Team and Steffen Brinckmann
author_email = sbrinckm@gmail.com
description = Investigation of nanoindentation and SEM data
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
install_requires =
    h5py
    numpy
    scipy
    lmfit
    xlrd
    pandas
    matplotlib
    scikit-image
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = micromechanics*

[options.package_data]
* = *.py, *.json, *.ttf